# prun-mcp

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  prun-mcp-spec.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/FIO/: fio-api-reference.md
docs/design/: base_plan_memory.md  resources.md
docs/mechanics/: mechanics.md
docs/spreadsheets/: PrUn repair guide.xlsx
docs/tools/: base_plans.md  buildings.md  cogm.md  exchange.md  market_analysis.md  materials.md  permit_io.md  planets.md  recipes.md
src/prun_mcp/: __init__.py  app.py  server.py  utils.py
src/prun_mcp/cache/: __init__.py  buildings_cache.py  csv_store.py  materials_cache.py  recipes_cache.py  workforce_cache.py
src/prun_mcp/fio/: __init__.py  client.py  exceptions.py
src/prun_mcp/models/: __init__.py  domain.py  fio.py
src/prun_mcp/prun_lib/: __init__.py  base.py  base_io.py  base_plans.py  building.py  buildings.py  cogm.py  exceptions.py  exchange.py  info.py  market.py  material_flow.py  materials.py  planets.py  recipes.py  workforce.py
tests/: __init__.py  conftest.py  test_base_plan_storage.py  test_base_plans_tool.py  test_building_cost.py  test_buildings_cache.py  test_buildings_resources.py  test_buildings_tool.py  test_cache.py  test_cache_manager.py  test_cogm_tool.py  test_exchange_tool.py  test_exchanges.py  test_fio_client.py  test_fio_models.py  test_market_analysis.py  test_materials_tool.py  test_mechanics.py  test_permit_io.py  test_planets_tool.py  test_recipes_cache.py  test_recipes_tool.py  test_utils.py  test_workforce.py
(+21 files in other folders)
