[project]
name = "prun-mcp"
dynamic = ["version"]
description = "MCP server for Prosperous Universe game data via FIO API"
readme = "README.md"
authors = [
    { name = "Fanshaw Dennis", email = "64549250+hyposcaler-bot@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "toon-format",
]

[project.scripts]
prun-mcp = "prun_mcp.server:main"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "ruff>=0.14.10",
]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }
